# fsbench-density

./: .gitmodules  .project  README  Results.ods  TODO
src/: BUILDING  CHANGELOG  CMakeLists.txt  README  abstractCodecs.cpp  abstractCodecs.hpp  benchmark.cpp  benchmark.hpp  codecs.cpp  codecs.hpp  common.hpp  main.cpp  misc.hpp  scheduler.cpp  scheduler.hpp  simple_codecs.cpp  simple_codecs.hpp  threads.hpp  tools.cpp  tools.hpp
src/codecs/: CrapWow.c  CrapWow.h  LZP_ds.cpp  LZWC.c  LZWC.h  MurmurHash3.h  Nakamichi.c  Nakamichi_r1-RSSBO_1GB_Wordfetcher_TRIAD.c  Nakamichi_r1-RSSBO_1GB_Wordfetcher_TRIAD_NOmemcpy_FIX.c  Nakamichi_r1-RSSBO_1GB_Wordfetcher_TRIAD_NOmemcpy_FIX_Kaidanji.c  Nakamichi_r1-RSSBO_1GB_Wordfetcher_TRIAD_NOmemcpy_FIX_Kaidanji_FIX.c  Nobuo-Ito-LZSS.c  RLE64.cpp  RLE64.hpp  Shrinker.c  Yappy.cpp  halibut-deflate.c  halibut-deflate.h  lrrle.c  lzfx.c  lzmat.h  lzmat_enc.c  lzss.cpp  lzss.hpp  lzv1.c  lzv1.h  miniz.c  miniz.cpp  miniz.hpp  quicklzzip.c  quicklzzip.h  sanmayce.c  sanmayce.h  spooky.cpp  spooky.h  unlzx.c  xxhash256.c  xxhash256.h
src/codecs/7z/: 7z.cpp  7z.hpp
src/codecs/CityHash/: city.cc  city.h  citybyteswap.h
src/codecs/Doboz/: Compressor.cpp
src/codecs/SHA3/: fsbench_SHA3.cpp  fsbench_SHA3.hpp
src/codecs/SHA3/Blake/: blake_opt64.c
src/codecs/SHA3/BlueMidnightWish/: BlueMidnightWish_opt.c  BlueMidnightWish_opt_002.c
src/codecs/SHA3/CubeHash/: cubehash.c
src/codecs/SHA3/Edon-R/: Edon-R_opt.c
src/codecs/SHA3/Groestl/: Groestl-opt.c  Groestl-opt.h
src/codecs/SHA3/JH/: jh_ansi_opt64.h
src/codecs/SHA3/Keccak/: KeccakNISTInterface.c
src/codecs/SHA3/SWIFFTX/: SHA3.c  SHA3.h  SWIFFTX.c  SWIFFTX.h  inttypes.h  stdbool.h  stdint.h
src/codecs/SHA3/Skein/: SHA3api_ref.c
src/codecs/_patches/: LZHAM.patch  LZWC.c  LZWC.c.orig  LZWC.c.rej  LZWC.patch  cityhash.diff  lz4bz.patch  pg_lz.diff  quicklzzip.diff  tornado.diff  tornado2.diff  zlib.diff
src/codecs/_patches/3/: LZWC.c
src/codecs/ar/: lzh.h  lzhclib.c  lzhxlib.c
src/codecs/bcl/src/: bcl.cpp  bcl.hpp
src/codecs/blake2/: blake2-config.h  blake2.h  blake2b-load-sse2.h  blake2b-round.h  blake2b.c  blake2bp.c  blake2s-load-sse2.h  blake2s-load-sse41.h  blake2s-load-xop.h  blake2s-round.h  blake2s.c  blake2sp.c
src/codecs/brieflz/: blz_crc32.c  blz_depack.c  brieflz.c  brieflz.h
src/codecs/brotli/enc/: write_bits.h
src/codecs/crush/: crush.hpp
src/codecs/cryptopp/: algparam.h  cryptopp.cpp  cryptopp.hpp
src/codecs/density/: CHANGELOG.md  LICENSE.md  README.md
src/codecs/density/src/: block.h  block_decode.c  block_decode.h  block_encode.c  block_encode.h  block_footer.c  block_footer.h  block_header.c  block_header.h  block_mode_marker.c  block_mode_marker.h  density_api.h  density_api_data_structures.h  globals.c  globals.h  kernel_chameleon.h  kernel_chameleon_decode.c  kernel_chameleon_decode.h  kernel_chameleon_dictionary.c  kernel_chameleon_dictionary.h  kernel_chameleon_encode.c  kernel_chameleon_encode.h  kernel_decode.h  kernel_encode.h  kernel_mandala.h  kernel_mandala_decode.c  kernel_mandala_decode.h  kernel_mandala_dictionary.c  kernel_mandala_dictionary.h  kernel_mandala_encode.c  kernel_mandala_encode.h  main_decode.c  main_decode.h  main_encode.c  main_encode.h  (+10 more)
src/codecs/ecrypt/: aes-ctr-bernstein.c  aes-ctr-hongjun.c  aes256-hongjun.h  chacha.c  ecrypt-config.h  ecrypt-sync-aes128-bernstein.h  ecrypt-sync-aes256-hongjun.h  ecrypt-sync-chacha.h  ecrypt-sync-hc-128.h  ecrypt-sync-hc-256.h  ecrypt-sync-lex.h  ecrypt-sync-rabbit.h  ecrypt-sync-rc4.h  ecrypt-sync-salsa20-12.h  ecrypt-sync-salsa20-8.h  ecrypt-sync-salsa20.h  ecrypt-sync-snow-2.0.h  ecrypt-sync-sosemanuk.h  ecrypt-sync-trivium.h  fsbench_ecrypt.cpp  fsbench_ecrypt.hpp  hc-128.c  hc-256.c  lex.c  rabbit.c  rc4.c  salsa20-12.c  salsa20-8.c  salsa20.c  snow-2.0.c  snow2_fast.c  sosemanuk.c  sosemanuk.h  trivium.c
src/codecs/fastcrypto/: rijndael-alg-fst.c  rijndael-alg-fst.h  umac.c  umac.h  vmac.h
src/codecs/fse/: fse.c
src/codecs/gipfeli/: decompress.cc  fsbench_gipfeli.cpp  fsbench_gipfeli.h  gipfeli.cc  gipfeli.h
src/codecs/lz4/: lz4bz.c  lz4bz.h  lz4hc.c
src/codecs/lzf/: lzf.h  lzfP.h  lzf_c.c  lzf_c_ultra.c  lzf_c_very.c
src/codecs/lzham/: readme.txt
src/codecs/lzo/: config.h
src/codecs/lzx_compress/: Makefile  hash_slide.c  hash_slide.h  lz_nonslide.c  lz_nonslide.h  lz_slide.c  lz_slide.h  lzx_compress.h  lzx_compress.man3  lzx_compress.mdoc3  lzx_config.h  lzx_test.c
src/codecs/mmini/: mmini.h
src/codecs/nakamichi/: Nakamichi_Aratama.c  Nakamichi_Butsuhira.c  Nakamichi_Butsuhira_branchless.c  Nakamichi_Daikuni.c  Nakamichi_Hanabi.c  Nakamichi_Hanazakari.c  Nakamichi_Hitomi.c  Nakamichi_Inazuma.c  Nakamichi_Jiten.c  Nakamichi_Kaibutsu.c  Nakamichi_Kaiko.c  Nakamichi_Kinezumi.c  Nakamichi_Kinroba.c  Nakamichi_Kinutora.c  Nakamichi_Kitsune.c  Nakamichi_Kumataka.c  Nakamichi_Nekomata.c  Nakamichi_Nin.c  Nakamichi_Nirenpatsu.c  Nakamichi_Sanagi.c  Nakamichi_Sanbashi.c  Nakamichi_Sanrenpatsu.c  Nakamichi_Sanshi.c  Nakamichi_Suiken.c  Nakamichi_Tengu.c  Nakamichi_Washi.c  Nakamichi_Yoko.c  Nakamichi_Zangetsu.c  Nakamichi_r1-RSSBO_1GB_Wordfetcher_TRIAD_NOmemcpy_FIX_Kaidanji_FIX.c  nakamichi.c  nakamichi.h
src/codecs/pg_lz/: pg_lzcompress.c  pg_lzcompress.h
src/codecs/quicklz/: quicklz.h  quicklz1.c  quicklz2.c  quicklz3.c
src/codecs/scz_compress/: scz.cpp  scz.h  scz.hpp  scz_core.c  scz_decompress_lib.c
src/codecs/siphash/: siphash.hpp  siphash24.c
src/codecs/snappy/: config.h  config_gcc.h
src/codecs/tinf/: tinf.cpp  tinf.hpp
src/codecs/tornado/: C_Tornado.cpp  C_Tornado.h  Common.cpp  Common.h  Compression.h  DataTables.cpp  DataTables.cpp~  EntropyCoder.cpp  LZ77_Coder.cpp  Tornado.cpp  main.cpp  tor_test.cpp  tor_test.h
src/codecs/z3lib/: BSD-LICENCE  fsbench_z3lib.cpp  fsbench_z3lib.hpp  z3blib.c  z3blib.h  z3crc32.h  z3dlib.c  z3dlib.h  z3lib.h  z3liblib.h
src/codecs/zfs/: zfs.h  zfs_fletcher.c  zfs_lzjb2010.c
src/codecs/zlib/: zlib.h
src/codecs/zling/: fsbench_zling.cpp  fsbench_zling.hpp  libzling_utils.cpp  libzling_utils.h
(+34 files in other folders)
